[gd_scene load_steps=18 format=3 uid="uid://b75mtqstb6hvi"]

[ext_resource type="PackedScene" uid="uid://fcy44fluab2d" path="res://scenes/entities/enemies/enemy.tscn" id="1_60fh3"]
[ext_resource type="Script" path="res://scenes/entities/enemies/boss.gd" id="2_6uerd"]
[ext_resource type="PackedScene" uid="uid://bt4il726k8d8x" path="res://graphics/characters/nagonford/Nagonford_Animated.glb" id="2_t3xby"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hn8dy"]
radius = 1.0
height = 7.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2p8vr"]
animation = &"2H_Melee_Attack_Spinning"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hbtqc"]
animation = &"1H_Melee_Attack_Slice_Horizontal"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_g748i"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b7ej7"]
animation = &"2H_Melee_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6f617"]
animation = &"Walking_A"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_67w4n"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0wymc"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q3iov"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_nwbad"]
states/Idle/node = SubResource("AnimationNodeAnimation_b7ej7")
states/Idle/position = Vector2(335, 100)
states/Running/node = SubResource("AnimationNodeAnimation_6f617")
states/Running/position = Vector2(471, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_67w4n"), "Idle", "Running", SubResource("AnimationNodeStateMachineTransition_0wymc"), "Running", "Idle", SubResource("AnimationNodeStateMachineTransition_q3iov")]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_r0aff"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_i2lud"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_yg43f"]
graph_offset = Vector2(80.7528, 117.68)
nodes/Animation/node = SubResource("AnimationNodeAnimation_2p8vr")
nodes/Animation/position = Vector2(600, 400)
nodes/AttackAnimation/node = SubResource("AnimationNodeAnimation_hbtqc")
nodes/AttackAnimation/position = Vector2(200, 320)
nodes/AttackOneShot/node = SubResource("AnimationNodeOneShot_g748i")
nodes/AttackOneShot/position = Vector2(560, 140)
nodes/MoveStateMachine/node = SubResource("AnimationNodeStateMachine_nwbad")
nodes/MoveStateMachine/position = Vector2(320, 120)
nodes/SpinBlend/node = SubResource("AnimationNodeBlend2_r0aff")
nodes/SpinBlend/position = Vector2(880, 140)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_i2lud")
nodes/TimeScale/position = Vector2(1060, 160)
nodes/output/position = Vector2(1240, 180)
node_connections = [&"AttackOneShot", 0, &"MoveStateMachine", &"AttackOneShot", 1, &"AttackAnimation", &"SpinBlend", 0, &"AttackOneShot", &"SpinBlend", 1, &"Animation", &"TimeScale", 0, &"SpinBlend", &"output", 0, &"TimeScale"]

[sub_resource type="SphereShape3D" id="SphereShape3D_wyikn"]
radius = 5.0

[node name="Boss" instance=ExtResource("1_60fh3")]
script = ExtResource("2_6uerd")
spin_speed = 6.0

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)
shape = SubResource("CapsuleShape3D_hn8dy")

[node name="AnimationTree" parent="." index="1"]
root_node = NodePath("../Skin")
tree_root = SubResource("AnimationNodeBlendTree_yg43f")
anim_player = NodePath("../Skin/AnimationPlayer")
parameters/AttackOneShot/active = false
parameters/AttackOneShot/internal_active = false
parameters/AttackOneShot/request = 0
parameters/SpinBlend/blend_amount = 0
parameters/TimeScale/scale = 0.5

[node name="Area3D" type="Area3D" parent="." index="2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
shape = SubResource("SphereShape3D_wyikn")

[node name="Skin" parent="." index="3" instance=ExtResource("2_t3xby")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -1.14, 1.416, 0)

[node name="Skeleton3D" parent="Skin/Rig" index="0"]
bones/1/position = Vector3(0.00841076, 0.367972, 1.21849e-10)
bones/2/rotation = Quaternion(-0.0605995, -0.130282, -0.00797808, 0.989591)
bones/3/rotation = Quaternion(0.0193385, 0.000632251, -0.00514301, 0.9998)
bones/4/position = Vector3(0.248044, 0.110857, 0.0825816)
bones/4/rotation = Quaternion(-0.585726, -0.246096, -0.722082, 0.273788)
bones/4/scale = Vector3(0.999999, 0.999999, 1)
bones/5/rotation = Quaternion(2.07492e-08, -8.1365e-09, -0.588428, 0.80855)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(5.11846e-11, -3.07743e-10, 0.0266581, 0.999645)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.166318, -0.69045, -0.0524375, 0.702045)
bones/8/position = Vector3(5.13846e-10, 0.0961251, -0.0575)
bones/8/rotation = Quaternion(-6.22192e-09, 4.31479e-09, -0.707107, 0.707107)
bones/8/scale = Vector3(1, 1, 1)
bones/9/position = Vector3(-0.176682, 0.111703, 0.0891542)
bones/9/rotation = Quaternion(-0.256018, 0.370789, 0.830867, 0.326544)
bones/9/scale = Vector3(0.999999, 0.999999, 1)
bones/10/rotation = Quaternion(9.7145e-09, 4.37731e-08, 0.550216, 0.835022)
bones/11/rotation = Quaternion(5.11843e-11, 3.07737e-10, -0.0266581, 0.999645)
bones/11/scale = Vector3(1, 1, 1)
bones/12/rotation = Quaternion(-0.257891, 0.203579, -0.0835665, 0.940778)
bones/13/position = Vector3(-5.13849e-10, 0.0961251, -0.0575)
bones/13/rotation = Quaternion(0.155711, -0.189455, 0.670289, 0.700409)
bones/13/scale = Vector3(1, 1, 1)
bones/15/rotation = Quaternion(0.0729584, 0.13049, 0.0127307, 0.98868)
bones/17/position = Vector3(0.170945, 0.113587, 1.39233e-08)
bones/17/rotation = Quaternion(0.991355, 0.0747248, 0.0406943, 0.0998735)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(0.416299, 6.15885e-08, -2.94263e-07, 0.909228)
bones/19/rotation = Quaternion(-0.626879, -0.210337, 0.0659394, 0.747284)
bones/19/scale = Vector3(1, 1, 0.999999)
bones/20/rotation = Quaternion(-5.92081e-06, 0.920113, -0.391653, 1.25293e-06)
bones/21/rotation = Quaternion(0.987807, -0.0402042, -0.012573, 0.149879)
bones/21/scale = Vector3(1, 1, 1)
bones/22/rotation = Quaternion(0.449417, -5.9598e-08, 3.13402e-07, 0.893322)
bones/23/rotation = Quaternion(-0.635589, 0.110582, -0.0340286, 0.763309)
bones/23/scale = Vector3(1, 1, 0.999999)
bones/24/rotation = Quaternion(8.93773e-07, 0.92012, -0.391637, 2.64972e-07)
bones/24/scale = Vector3(1, 0.999997, 1)
bones/25/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/26/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/27/position = Vector3(0.0308395, 0.382458, -2.86687e-15)
bones/27/rotation = Quaternion(1.00138e-08, 1.91522e-09, 0.984639, -0.174603)
bones/28/position = Vector3(3.75295e-09, 0.213436, -1.0343e-08)
bones/28/rotation = Quaternion(-9.99889e-08, 0.391084, 0.920355, -3.39507e-08)
bones/29/position = Vector3(2.3491e-08, 0.16565, -5.09136e-09)
bones/30/rotation = Quaternion(1, 2.30261e-09, 1.93335e-07, -4.39844e-16)
bones/32/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/33/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/34/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/35/position = Vector3(-1.11482e-08, 0.213436, -2.50942e-15)
bones/35/rotation = Quaternion(-1.05796e-07, 0.391084, 0.920355, -2.58643e-08)
bones/36/position = Vector3(-6.31128e-09, 0.16565, 2.70695e-09)
bones/37/rotation = Quaternion(1, 3.76526e-09, 1.94879e-07, 7.45058e-09)
bones/39/position = Vector3(0.839842, 0.719866, -0.447558)
bones/39/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/40/position = Vector3(0.342043, 0.806098, 0.401956)
bones/40/rotation = Quaternion(0.622929, 0.0708001, 0.444546, 0.639786)
bones/41/position = Vector3(-0.87741, 1.03555, -0.447559)
bones/41/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/42/position = Vector3(-0.351142, 0.820305, 0.285307)
bones/42/rotation = Quaternion(0.308371, -0.224473, -0.91206, 0.150551)

[node name="Nagonford_Axe" parent="Skin/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.201497, 0.792755, 0.575272, 0.613468, 0.355715, -0.705069, -0.763579, 0.494981, -0.414655, -0.299412, 0.684778, 0.357683)

[node name="Nagonford_Axe" parent="Skin/Rig/Skeleton3D/Nagonford_Axe" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.939693, -0.34202, 0, 0.34202, 0.939693, 0, 0, 0)

[node name="Nagonford_Cape" parent="Skin/Rig/Skeleton3D" index="1"]
transform = Transform3D(0.965926, 0.0315801, -0.256885, -0.0103614, 0.996451, 0.0835381, 0.258612, -0.0780299, 0.962825, 0.0279199, 1.17452, -0.06318)

[node name="AttackTimer" parent="Timers" index="0"]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]

[editable path="Skin"]
